# EREEA_Rust

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  student.txt
adr/: adr_0001-bevy.md  adr_0002-ecs.md  adr_0003-struct_robot.md
src/: lib.rs  main.rs
src/components/: audio.rs  map.rs  mod.rs  resource.rs  robot.rs  ui.rs
src/plugins/: plugins.rs
src/resources/: app_resources.rs  mod.rs
src/systems/: audio.rs  camera.rs  mod.rs  movement.rs  ui.rs  utilities.rs
tests/: components_test.rs  systems_tests.rs
