[package]
name = "essaim_de_robots_pour_exploration_et_etude_astrobiologique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
noise = "0.8"
rand = "0.8.5"
bevy_egui = "0.27"
bevy_ui_exact_image = "0.2.1"

[[bin]]
name = "essaim_de_robots_pour_exploration_et_etude_astrobiologique"
path = "src/main.rs"